src/TParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 T.g 2022-01-07 21:34:17
    //note that the MathObject class files of assignment 1 are in the assignment3 Folder
import java.util.HashMap;
import java.util.Vector;
import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map; 

public class TParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "Digit", "NEWLINE", "Letter", "WS", "CR", "LF", "'='", "':'", "'['", "';'", "']'", "'('", "','", "')'", "'size'", "'disp'", "'+'", "'-'", "'*'", "'/'"
    };
    public static final int T__19=19;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int ID=4;
    public static final int WS=8;
    public static final int EOF=-1;
    public static final int Digit=5;
    public static final int NEWLINE=6;
    public static final int CR=9;
    public static final int Letter=7;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int LF=10;
    public static final int T__20=20;
    public static final int T__21=21;

    // delegates
    // delegators


        public TParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public TParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return TParser.tokenNames; }
    public String getGrammarFileName() { return "T.g"; }


    int variableCount = 0;
    Map memory  =  new HashMap<String,MathObject>();

    //method for assigning MathObject to a String
    public void AssignVar(String var,MathObject b)
    {
      memory.put(var,b);
    }

    //method that returns value of Variable
    public MathObject retVarVal(String var)
    { 
      return (MathObject)(memory.get(var));
    }




    // $ANTLR start "prog"
    // T.g:34:1: prog : ( stat )+ EOF ;
    public final void prog() throws RecognitionException {
        try {
            // T.g:34:6: ( ( stat )+ EOF )
            // T.g:34:10: ( stat )+ EOF
            {
            // T.g:34:10: ( stat )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==ID||(LA1_0>=19 && LA1_0<=20)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // T.g:0:0: stat
            	    {
            	    pushFollow(FOLLOW_stat_in_prog44);
            	    stat();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return ;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);

            match(input,EOF,FOLLOW_EOF_in_prog47); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "prog"


    // $ANTLR start "stat"
    // T.g:36:1: stat : ( assignment | sequenceassignment | soloexpr | matrixassignment | function );
    public final void stat() throws RecognitionException {
        try {
            // T.g:36:6: ( assignment | sequenceassignment | soloexpr | matrixassignment | function )
            int alt2=5;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==ID) ) {
                int LA2_1 = input.LA(2);

                if ( (synpred2_T()) ) {
                    alt2=1;
                }
                else if ( (synpred3_T()) ) {
                    alt2=2;
                }
                else if ( (synpred4_T()) ) {
                    alt2=3;
                }
                else if ( (synpred5_T()) ) {
                    alt2=4;
                }
                else if ( (true) ) {
                    alt2=5;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;
                }
            }
            else if ( ((LA2_0>=19 && LA2_0<=20)) ) {
                alt2=5;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // T.g:36:9: assignment
                    {
                    pushFollow(FOLLOW_assignment_in_stat57);
                    assignment();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // T.g:37:5: sequenceassignment
                    {
                    pushFollow(FOLLOW_sequenceassignment_in_stat63);
                    sequenceassignment();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 3 :
                    // T.g:38:5: soloexpr
                    {
                    pushFollow(FOLLOW_soloexpr_in_stat70);
                    soloexpr();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 4 :
                    // T.g:39:5: matrixassignment
                    {
                    pushFollow(FOLLOW_matrixassignment_in_stat76);
                    matrixassignment();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 5 :
                    // T.g:40:5: function
                    {
                    pushFollow(FOLLOW_function_in_stat82);
                    function();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "stat"


    // $ANTLR start "assignment"
    // T.g:43:1: assignment : ex1= ID '=' ex2= expr assignmenttail ;
    public final void assignment() throws RecognitionException {
        Token ex1=null;
        double ex2 = 0.0;


        try {
            // T.g:43:11: (ex1= ID '=' ex2= expr assignmenttail )
            // T.g:43:14: ex1= ID '=' ex2= expr assignmenttail
            {
            ex1=(Token)match(input,ID,FOLLOW_ID_in_assignment94); if (state.failed) return ;
            match(input,11,FOLLOW_11_in_assignment96); if (state.failed) return ;
            pushFollow(FOLLOW_expr_in_assignment100);
            ex2=expr();

            state._fsp--;
            if (state.failed) return ;
            pushFollow(FOLLOW_assignmenttail_in_assignment102);
            assignmenttail();

            state._fsp--;
            if (state.failed) return ;
            if ( state.backtracking==0 ) {

              				System.out.println((ex1!=null?ex1.getText():null) + "=\n\t" + ex2); //just testing 
              				if (!(memory.containsKey((ex1!=null?ex1.getText():null))))
              				{	
              					MathScalar sc = new MathScalar(ex2); //USING MATHSCALAR since assignment is for  scalars
              					AssignVar((ex1!=null?ex1.getText():null),sc); 
              					variableCount++;
              				}			
              				//otherwise update key's object
              				//else{//not needed for input}
              			
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "assignment"


    // $ANTLR start "sequenceassignment"
    // T.g:58:1: sequenceassignment : ex1= ID '=' ex2= expr ':' ex3= expr assignmenttail ;
    public final void sequenceassignment() throws RecognitionException {
        Token ex1=null;
        double ex2 = 0.0;

        double ex3 = 0.0;


        try {
            // T.g:58:19: (ex1= ID '=' ex2= expr ':' ex3= expr assignmenttail )
            // T.g:58:21: ex1= ID '=' ex2= expr ':' ex3= expr assignmenttail
            {
            ex1=(Token)match(input,ID,FOLLOW_ID_in_sequenceassignment121); if (state.failed) return ;
            match(input,11,FOLLOW_11_in_sequenceassignment123); if (state.failed) return ;
            pushFollow(FOLLOW_expr_in_sequenceassignment127);
            ex2=expr();

            state._fsp--;
            if (state.failed) return ;
            match(input,12,FOLLOW_12_in_sequenceassignment129); if (state.failed) return ;
            pushFollow(FOLLOW_expr_in_sequenceassignment133);
            ex3=expr();

            state._fsp--;
            if (state.failed) return ;
            pushFollow(FOLLOW_assignmenttail_in_sequenceassignment135);
            assignmenttail();

            state._fsp--;
            if (state.failed) return ;
            if ( state.backtracking==0 ) {

              		//	  System.out.print((ex1!=null?ex1.getText():null) + "=\n\t");
              		//	  for(double i=ex2;i<=ex3;i++)
              		//	  {
              		//	    System.out.print(i+"\t");
              		//	  }
              			  MathScalar m1 = new MathScalar(ex2);
              			  MathScalar m2 = new MathScalar(ex3);
              			  MathMatrix mx = MathOp.createSequence(m1,m2);
              			  AssignVar((ex1!=null?ex1.getText():null),mx);
              			  variableCount++;
              			
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "sequenceassignment"


    // $ANTLR start "matrixassignment"
    // T.g:73:1: matrixassignment : (idd= ID '=' '[' d1= Digit d2= Digit ';' d3= Digit d4= Digit ']' NEWLINE | i1= ID '=' '[' b1= Digit b2= Digit ';' b3= Digit b4= Digit ']' ';' NEWLINE );
    public final void matrixassignment() throws RecognitionException {
        Token idd=null;
        Token d1=null;
        Token d2=null;
        Token d3=null;
        Token d4=null;
        Token i1=null;
        Token b1=null;
        Token b2=null;
        Token b3=null;
        Token b4=null;

        try {
            // T.g:73:17: (idd= ID '=' '[' d1= Digit d2= Digit ';' d3= Digit d4= Digit ']' NEWLINE | i1= ID '=' '[' b1= Digit b2= Digit ';' b3= Digit b4= Digit ']' ';' NEWLINE )
            int alt3=2;
            alt3 = dfa3.predict(input);
            switch (alt3) {
                case 1 :
                    // T.g:73:19: idd= ID '=' '[' d1= Digit d2= Digit ';' d3= Digit d4= Digit ']' NEWLINE
                    {
                    idd=(Token)match(input,ID,FOLLOW_ID_in_matrixassignment154); if (state.failed) return ;
                    match(input,11,FOLLOW_11_in_matrixassignment156); if (state.failed) return ;
                    match(input,13,FOLLOW_13_in_matrixassignment158); if (state.failed) return ;
                    d1=(Token)match(input,Digit,FOLLOW_Digit_in_matrixassignment162); if (state.failed) return ;
                    d2=(Token)match(input,Digit,FOLLOW_Digit_in_matrixassignment166); if (state.failed) return ;
                    match(input,14,FOLLOW_14_in_matrixassignment168); if (state.failed) return ;
                    d3=(Token)match(input,Digit,FOLLOW_Digit_in_matrixassignment172); if (state.failed) return ;
                    d4=(Token)match(input,Digit,FOLLOW_Digit_in_matrixassignment176); if (state.failed) return ;
                    match(input,15,FOLLOW_15_in_matrixassignment178); if (state.failed) return ;
                    match(input,NEWLINE,FOLLOW_NEWLINE_in_matrixassignment180); if (state.failed) return ;
                    if ( state.backtracking==0 ) {
                       
                      				if (!(memory.containsKey((idd!=null?idd.getText():null))))
                      				{	
                      					double D1 = new Double((d1!=null?d1.getText():null)).doubleValue();
                      					double D2 = new Double((d2!=null?d2.getText():null)).doubleValue();
                      					double D3 = new Double((d3!=null?d3.getText():null)).doubleValue();
                      					double D4 = new Double((d4!=null?d4.getText():null)).doubleValue();
                      					double[][] arr = {{D1,D2},{D3,D4}};
                      					MathMatrix mxx = new MathMatrix(arr);
                      					AssignVar((idd!=null?idd.getText():null),mxx); 
                      					variableCount++;
                      					System.out.print((idd!=null?idd.getText():null)+"=");
                      				  	for(int i=0;i<mxx.getMatrix().length;i++)
                      					  {
                      					      System.out.print("\n\t");
                      					      for(int j=0;j<mxx.getMatrix()[0].length;j++)
                      					    {
                      					       System.out.print(mxx.getMatrix()[j][i] +" ");
                      					    }
                      					  }
                      					System.out.println();
                      				}				  
                      			
                    }

                    }
                    break;
                case 2 :
                    // T.g:98:5: i1= ID '=' '[' b1= Digit b2= Digit ';' b3= Digit b4= Digit ']' ';' NEWLINE
                    {
                    i1=(Token)match(input,ID,FOLLOW_ID_in_matrixassignment194); if (state.failed) return ;
                    match(input,11,FOLLOW_11_in_matrixassignment196); if (state.failed) return ;
                    match(input,13,FOLLOW_13_in_matrixassignment198); if (state.failed) return ;
                    b1=(Token)match(input,Digit,FOLLOW_Digit_in_matrixassignment202); if (state.failed) return ;
                    b2=(Token)match(input,Digit,FOLLOW_Digit_in_matrixassignment206); if (state.failed) return ;
                    match(input,14,FOLLOW_14_in_matrixassignment208); if (state.failed) return ;
                    b3=(Token)match(input,Digit,FOLLOW_Digit_in_matrixassignment212); if (state.failed) return ;
                    b4=(Token)match(input,Digit,FOLLOW_Digit_in_matrixassignment216); if (state.failed) return ;
                    match(input,15,FOLLOW_15_in_matrixassignment218); if (state.failed) return ;
                    match(input,14,FOLLOW_14_in_matrixassignment220); if (state.failed) return ;
                    match(input,NEWLINE,FOLLOW_NEWLINE_in_matrixassignment222); if (state.failed) return ;
                    if ( state.backtracking==0 ) {

                      					double B1 = new Double((b1!=null?b1.getText():null)).doubleValue();
                      					double B2 = new Double((b2!=null?b2.getText():null)).doubleValue();
                      					double B3 = new Double((b3!=null?b3.getText():null)).doubleValue();
                      					double B4 = new Double((b4!=null?b4.getText():null)).doubleValue();
                      					double[][] arrr = {{B1,B2},{B3,B4}};
                      					MathMatrix mxx = new MathMatrix(arrr);
                      					AssignVar((i1!=null?i1.getText():null),mxx); 
                      					variableCount++;			  
                      			
                    }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "matrixassignment"


    // $ANTLR start "soloexpr"
    // T.g:111:1: soloexpr : ( ID NEWLINE | ID ';' NEWLINE );
    public final void soloexpr() throws RecognitionException {
        Token ID1=null;

        try {
            // T.g:111:9: ( ID NEWLINE | ID ';' NEWLINE )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==ID) ) {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==NEWLINE) ) {
                    alt4=1;
                }
                else if ( (LA4_1==14) ) {
                    alt4=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 1, input);

                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // T.g:111:28: ID NEWLINE
                    {
                    ID1=(Token)match(input,ID,FOLLOW_ID_in_soloexpr238); if (state.failed) return ;
                    match(input,NEWLINE,FOLLOW_NEWLINE_in_soloexpr240); if (state.failed) return ;
                    if ( state.backtracking==0 ) {

                      			  if(memory.get((ID1!=null?ID1.getText():null)) instanceof MathMatrix)
                      			{
                      			  MathMatrix m = (MathMatrix)memory.get((ID1!=null?ID1.getText():null));
                      			  System.out.print("Ans "+"=\n\t");
                      			  for(int i=0;i<m.getMatrix().length;i++)
                      			  {
                      			      for(int j=0;j<m.getMatrix()[0].length;j++)
                      			    {
                      			       System.out.print(m.getMatrix()[j][i] +"\t");
                      			    }
                      			  }
                      			  System.out.println("\n");
                      			}
                      			
                    }

                    }
                    break;
                case 2 :
                    // T.g:127:5: ID ';' NEWLINE
                    {
                    match(input,ID,FOLLOW_ID_in_soloexpr252); if (state.failed) return ;
                    match(input,14,FOLLOW_14_in_soloexpr254); if (state.failed) return ;
                    match(input,NEWLINE,FOLLOW_NEWLINE_in_soloexpr256); if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "soloexpr"


    // $ANTLR start "function"
    // T.g:130:1: function : (idf= ID '(' d1= Digit ',' d2= Digit ')' assignmenttail | 'size' '(' idff= ID ',' dg= Digit ')' assignmenttail | 'size' '(' idfff= ID ')' assignmenttail | 'disp' '(' idffff= ID ')' assignmenttail );
    public final void function() throws RecognitionException {
        Token idf=null;
        Token d1=null;
        Token d2=null;
        Token idff=null;
        Token dg=null;
        Token idfff=null;
        Token idffff=null;

        try {
            // T.g:130:9: (idf= ID '(' d1= Digit ',' d2= Digit ')' assignmenttail | 'size' '(' idff= ID ',' dg= Digit ')' assignmenttail | 'size' '(' idfff= ID ')' assignmenttail | 'disp' '(' idffff= ID ')' assignmenttail )
            int alt5=4;
            switch ( input.LA(1) ) {
            case ID:
                {
                alt5=1;
                }
                break;
            case 19:
                {
                int LA5_2 = input.LA(2);

                if ( (LA5_2==16) ) {
                    int LA5_4 = input.LA(3);

                    if ( (LA5_4==ID) ) {
                        int LA5_5 = input.LA(4);

                        if ( (LA5_5==17) ) {
                            alt5=2;
                        }
                        else if ( (LA5_5==18) ) {
                            alt5=3;
                        }
                        else {
                            if (state.backtracking>0) {state.failed=true; return ;}
                            NoViableAltException nvae =
                                new NoViableAltException("", 5, 5, input);

                            throw nvae;
                        }
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return ;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 5, 4, input);

                        throw nvae;
                    }
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 5, 2, input);

                    throw nvae;
                }
                }
                break;
            case 20:
                {
                alt5=4;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }

            switch (alt5) {
                case 1 :
                    // T.g:131:4: idf= ID '(' d1= Digit ',' d2= Digit ')' assignmenttail
                    {
                    idf=(Token)match(input,ID,FOLLOW_ID_in_function274); if (state.failed) return ;
                    match(input,16,FOLLOW_16_in_function276); if (state.failed) return ;
                    d1=(Token)match(input,Digit,FOLLOW_Digit_in_function280); if (state.failed) return ;
                    match(input,17,FOLLOW_17_in_function282); if (state.failed) return ;
                    d2=(Token)match(input,Digit,FOLLOW_Digit_in_function286); if (state.failed) return ;
                    match(input,18,FOLLOW_18_in_function288); if (state.failed) return ;
                    pushFollow(FOLLOW_assignmenttail_in_function290);
                    assignmenttail();

                    state._fsp--;
                    if (state.failed) return ;
                    if ( state.backtracking==0 ) {

                      			  if(memory.containsKey((idf!=null?idf.getText():null)))
                      			    {
                      			      if(retVarVal((idf!=null?idf.getText():null)) instanceof MathMatrix)
                      				{
                      				    int D1 = new Integer((d1!=null?d1.getText():null)).intValue();
                      				    int D2 = new Integer((d2!=null?d2.getText():null)).intValue();
                      				    MathMatrix mxm = (MathMatrix)retVarVal((idf!=null?idf.getText():null));
                      				    System.out.print("Ans "+"=\n\t" + mxm.getMatrix()[D1][D2] +"\n");
                      				}
                      			    }
                      			
                    }

                    }
                    break;
                case 2 :
                    // T.g:145:5: 'size' '(' idff= ID ',' dg= Digit ')' assignmenttail
                    {
                    match(input,19,FOLLOW_19_in_function303); if (state.failed) return ;
                    match(input,16,FOLLOW_16_in_function305); if (state.failed) return ;
                    idff=(Token)match(input,ID,FOLLOW_ID_in_function309); if (state.failed) return ;
                    match(input,17,FOLLOW_17_in_function311); if (state.failed) return ;
                    dg=(Token)match(input,Digit,FOLLOW_Digit_in_function315); if (state.failed) return ;
                    match(input,18,FOLLOW_18_in_function317); if (state.failed) return ;
                    pushFollow(FOLLOW_assignmenttail_in_function319);
                    assignmenttail();

                    state._fsp--;
                    if (state.failed) return ;
                    if ( state.backtracking==0 ) {

                      			  if(memory.containsKey((idff!=null?idff.getText():null)))
                      			    {
                      			        if(memory.get((idff!=null?idff.getText():null)) instanceof MathMatrix)
                      				{
                      				    int D1 = new Integer((dg!=null?dg.getText():null)).intValue();
                      				    MathMatrix mxm = (MathMatrix)memory.get((idff!=null?idff.getText():null));
                      				    if(mxm!=null)
                      				    System.out.println("Ans "+"=\n\t" + (double)mxm.getMatrix()[D1-1].length +"\n");
                      				}
                      			    }
                      			
                    }

                    }
                    break;
                case 3 :
                    // T.g:159:5: 'size' '(' idfff= ID ')' assignmenttail
                    {
                    match(input,19,FOLLOW_19_in_function332); if (state.failed) return ;
                    match(input,16,FOLLOW_16_in_function334); if (state.failed) return ;
                    idfff=(Token)match(input,ID,FOLLOW_ID_in_function338); if (state.failed) return ;
                    match(input,18,FOLLOW_18_in_function340); if (state.failed) return ;
                    pushFollow(FOLLOW_assignmenttail_in_function342);
                    assignmenttail();

                    state._fsp--;
                    if (state.failed) return ;
                    if ( state.backtracking==0 ) {

                      			  if(memory.containsKey((idfff!=null?idfff.getText():null)))
                      			    {
                      			        if(memory.get((idfff!=null?idfff.getText():null)) instanceof MathMatrix)
                      				{
                      				    MathMatrix mxmx = (MathMatrix)memory.get((idfff!=null?idfff.getText():null));
                      				    if(mxmx!=null)
                      				    System.out.println("Ans "+"=\n\t" + (double)mxmx.rowsize +"  " + (double)mxmx.columnsize + "\n");
                      				}
                      			    }
                      			
                    }

                    }
                    break;
                case 4 :
                    // T.g:172:5: 'disp' '(' idffff= ID ')' assignmenttail
                    {
                    match(input,20,FOLLOW_20_in_function354); if (state.failed) return ;
                    match(input,16,FOLLOW_16_in_function356); if (state.failed) return ;
                    idffff=(Token)match(input,ID,FOLLOW_ID_in_function360); if (state.failed) return ;
                    match(input,18,FOLLOW_18_in_function362); if (state.failed) return ;
                    pushFollow(FOLLOW_assignmenttail_in_function364);
                    assignmenttail();

                    state._fsp--;
                    if (state.failed) return ;
                    if ( state.backtracking==0 ) {

                      			  if(memory.containsKey((idffff!=null?idffff.getText():null)))
                      			    {
                      			        if(memory.get((idffff!=null?idffff.getText():null)) instanceof MathMatrix)
                      				{
                      				    MathMatrix mxmxm = (MathMatrix)memory.get((idffff!=null?idffff.getText():null));
                      				    if(mxmxm!=null)
                      				    System.out.println((idffff!=null?idffff.getText():null) + "=\n" + mxmxm);
                      				}
                      			    }
                      			
                    }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "function"


    // $ANTLR start "assignmenttail"
    // T.g:187:1: assignmenttail : ( NEWLINE | ';' NEWLINE );
    public final void assignmenttail() throws RecognitionException {
        try {
            // T.g:187:15: ( NEWLINE | ';' NEWLINE )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==NEWLINE) ) {
                alt6=1;
            }
            else if ( (LA6_0==14) ) {
                alt6=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // T.g:187:18: NEWLINE
                    {
                    match(input,NEWLINE,FOLLOW_NEWLINE_in_assignmenttail381); if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // T.g:188:5: ';' NEWLINE
                    {
                    match(input,14,FOLLOW_14_in_assignmenttail388); if (state.failed) return ;
                    match(input,NEWLINE,FOLLOW_NEWLINE_in_assignmenttail390); if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "assignmenttail"


    // $ANTLR start "expr"
    // T.g:194:1: expr returns [double value] : (t1= term '+' e1= expr | t2= term '-' e2= expr | t3= term );
    public final double expr() throws RecognitionException {
        double value = 0.0;

        double t1 = 0.0;

        double e1 = 0.0;

        double t2 = 0.0;

        double e2 = 0.0;

        double t3 = 0.0;


        try {
            // T.g:194:28: (t1= term '+' e1= expr | t2= term '-' e2= expr | t3= term )
            int alt7=3;
            switch ( input.LA(1) ) {
            case Digit:
                {
                int LA7_1 = input.LA(2);

                if ( (synpred12_T()) ) {
                    alt7=1;
                }
                else if ( (synpred13_T()) ) {
                    alt7=2;
                }
                else if ( (true) ) {
                    alt7=3;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return value;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 1, input);

                    throw nvae;
                }
                }
                break;
            case ID:
                {
                int LA7_2 = input.LA(2);

                if ( (synpred12_T()) ) {
                    alt7=1;
                }
                else if ( (synpred13_T()) ) {
